fix de overflow

--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,8 @@
 html,
 body {
 	font-family: 'Roboto', sans-serif;
+	overflow: hidden;
+	position: relative;
 	font-weight: 300;
 	box-sizing: border-box;
 	overflow: hidden;
@@ -24,26 +26,27 @@ body {
 }
 
 .webgl {
-	position: fixed;
-	display: block;
+	position: absolute;
+	/* display: block; */
 	top: 0;
 	left: 0;
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 	outline: none;
+	/* overflow: hidden; */
 }
 .ui {
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 	pointer-events: none;
 }
 .btnSp {
 	position: absolute;
-	right: 5%;
-	top: 5%;
+	left: 5%;
+	bottom: 5%;
 	color: #ffffff;
 	width: 10rem;
 	background: rgba(167, 52, 57, 1);
@@ -69,11 +72,11 @@ body {
 }
 /* loading bar */
 .progress-bar-container {
-	position: fixed;
+	position: absolute;
 	top: 0;
 	left: 0;
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 
 	background-color: white;
 	display: flex;
